Configure native-agent mode when attempting to product a native-image
* Configure Delombok
* Add Spring Snapshot repositories
* Exclude logback-spring.xml from packaging